--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,9 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <form action='/team' method="POST"
+   <form action='/team' method="POST">
+     
+   </form>
  
 
 
