--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
    <form action='/team' method="POST">
-     <p>Team Name:<input type = "text" </p>
+     <p>Team Name:<input type="text" name="name"></p>
    </form>
  
 
