--- a/views/team.erb
+++ b/views/team.erb
@@ -7,6 +7,8 @@
  <body>
    <form action='/team' method="POST">
      <p>Team Name:<input type="text" name="name"></p>
+     <p>Coach:<input type="text" name="coach"></p>
+     <p>Point Guard:<input type="text" name="pg"></p>
    </form>
  
 
