Automatically backed up by Learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,8 @@
  </head>
  <body>
    <h1>Create a Basketball Team!</h1>
-   <h1>Team Name: <%= @name %></h1>
+   <p>Team Name: <%= @name %></p>
+   
  
 
 
