--- a/views/team.erb
+++ b/views/team.erb
@@ -13,8 +13,7 @@
    <p>Small Forward: <%= @sf %></p>
    <p>Power Forward:<%= @pf %></p>
    <p>Center: <%= @c %></p>
- 
-
+   <input type="submit" name="Submit">
 
  </body>
 </html>
